# sentinelprobe

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: schema.md  usage.md
prompt_injection_harness/: README.md  __init__.py  cases.py  compare.py  doctor.py  html_reports.py  pi_harness.py  presets.py  providers.py  reports.py  requirements.txt  scoring.py
prompt_injection_harness/browser_targets/: claude_template.json  glean_template.json
prompt_injection_harness/cases/: agent_file_prompt_injection.yaml  codegen_boundary.yaml  direct_advanced_prompt_injection.yaml  direct_prompt_injection.yaml  indirect_prompt_injection.yaml  secret_boundary.yaml
prompt_injection_harness/examples/: vulnerable_echo_target.py
prompt_injection_harness/wrappers/: __init__.py  claude_code_wrapper.py
scripts/: check.py
tests/: test_cases.py  test_presets.py  test_providers.py  test_reports.py  test_scoring.py
